# vision

./: .gitignore  mise.toml  pyproject.toml  readme.md
configs/: base.yaml  smoke.yaml
src/vision/: __init__.py  backends.py  convert.py  data.py  ensemble.py  geometry.py  infer.py  labeling.py  metric.py  splits.py  sweep.py  synth.py  track.py  viz.py
tests/: test_smoke.py
